all todos functionalities added
